Hook for reading spell tome

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,11 +122,13 @@ find_path(XBYAK_INCLUDE_DIRS "xbyak/xbyak.h")
 
 set(headers
 	src/PCH.h
+	src/Hooks.h
 )
 
 set(sources
 	src/main.cpp
 	src/PCH.cpp
+	src/Hooks.cpp
 )
 
 source_group(
