--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,9 @@ set(headers
 	src/PCH.h
 	src/Offsets.h
 	src/Hooks.h
+	src/Registration.h
+	src/Papyrus.h
+	src/ReferenceAliasExt.h
 	src/SpellTomeManager.h
 )
 
@@ -131,6 +134,9 @@ set(sources
 	src/main.cpp
 	src/PCH.cpp
 	src/Hooks.cpp
+	src/Registration.cpp
+	src/Papyrus.cpp
+	src/ReferenceAliasExt.cpp
 	src/SpellTomeManager.cpp
 )
 
