Move source and header lists to separate files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,34 +120,8 @@ find_path(XBYAK_INCLUDE_DIRS "xbyak/xbyak.h")
 
 # ---- Add source files ----
 
-set(headers
-	src/PCH.h
-	src/Offsets.h
-	src/Hooks.h
-
-	src/Registration.h
-	src/Papyrus.h
-	src/FormExt.h
-	src/ReferenceAliasExt.h
-	src/UIExt.h
-
-	src/SpellTomeManager.h
-)
-
-set(sources
-	src/main.cpp
-	src/PCH.cpp
-	src/Hooks.cpp
-
-	src/Registration.cpp
-	src/Papyrus.cpp
-
-	src/FormExt.cpp
-	src/ReferenceAliasExt.cpp
-	src/UIExt.cpp
-
-	src/SpellTomeManager.cpp
-)
+include(cmake/headerlist.cmake)
+include(cmake/sourcelist.cmake)
 
 source_group(
 	TREE ${CMAKE_CURRENT_SOURCE_DIR}
