--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,14 +95,12 @@ find_path(XBYAK_INCLUDE_DIRS "xbyak/xbyak.h")
 
 # ---- Add source files ----
 
-include(cmake/headerlist.cmake)
 include(cmake/sourcelist.cmake)
 
 source_group(
 	TREE
 		${CMAKE_CURRENT_SOURCE_DIR}
 	FILES
-		${HEADERS}
 		${SOURCES}
 )
 
@@ -118,7 +116,6 @@ source_group(
 add_library(
 	${PROJECT_NAME}
 	SHARED
-	${HEADERS}
 	${SOURCES}
 	${CMAKE_CURRENT_BINARY_DIR}/include/Version.h
 	${CMAKE_CURRENT_BINARY_DIR}/version.rc
@@ -136,7 +133,7 @@ target_include_directories(
 	${PROJECT_NAME}
 	PRIVATE
         ${CMAKE_CURRENT_BINARY_DIR}/include
-        ${CMAKE_CURRENT_SOURCE_DIR}/src
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
         ${XBYAK_INCLUDE_DIRS}
 )
 
@@ -202,7 +199,7 @@ endif ()
 target_precompile_headers(
 	${PROJECT_NAME}
 	PRIVATE
-		src/PCH.h
+		include/PCH.h
 )
 
 # ---- Post build ----
