External module for SKSE plugin setup

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "extern/CommonLibSSE"]
-	path = extern/CommonLibSSE
+	path = external/CommonLibSSE
 	url = https://github.com/Ryan-rsm-McKenzie/CommonLibSSE
 [submodule "tools/BethesdaCMakeModules"]
 	path = tools/BethesdaCMakeModules
 	url = https://github.com/Exit-9B/BethesdaCMakeModules.git
+[submodule "tools/SKSE-CMakeModules"]
+	path = tools/SKSE-CMakeModules
+	url = https://github.com/Exit-9B/SKSE-CMakeModules.git
